Bug de la version mobile ✅

--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ padding: 20px;
     .image{
         width: 100%;
     height: 30%;
-    background-image: linear-gradient( to right, rgba(145, 51, 204, 0.4), rgba(145, 51, 204, 0.4) ), url(../images/image-header-mobile.jpg);
+    background-image: linear-gradient( to right, rgba(145, 51, 204, 0.4), rgba(145, 51, 204, 0.4) ), url(./images/image-header-mobile.jpg);
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
